# mcp-email-server

./: .env.example  .gitignore  CLAUDE.md  JOURNAL.md  README.md  pyproject.toml  setup.sh  test_leetcode.py
.claude/: CLAUDE.sync.md
backends/: __init__.py
backends/_template/: README.md
backends/email/: README.md  __init__.py  config.toml.example
backends/email/patches/: __init__.py  ssl_bypass.py
cloudflare/: tunnel-config.yml.example
cloudflare/worker/: README.md  package.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
cloudflare/worker/src/: github-handler.ts  index.ts
docs/: tools-guide.md
router/: __init__.py  requirements.txt  server.py
router/backends/: blah.py  browser.py  cartesia.py  discord.py  email.py  kp3.py  lab.py  leetcode.py  letta.py  memory.py  notifications.py  todoist.py  twitter.py  unified_memory.py  web.py
scripts/: browser-connect.sh  deploy.sh  logs.sh  memfs-sync.py  notify-check.sh  run-headless-brave.sh  run-headless-firefox.sh  status.sh  test-email.sh  test.sh  tunnel.sh
services/: cloudflared.service  headless-brave.service  kp3-podman.service  mcp-router.service  protonmail-bridge.service
tests/: conftest.py  test_browser_agent.py  test_email_backend.py  test_notifications_backend.py  test_router.py  test_todoist_backend.py
