[project]
name = "mcp-email-server"
version = "1.0.0"
description = "Minimal MCP Email Server for ProtonMail Bridge"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "aioimaplib>=2.0.0",
    "aiosmtplib>=3.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
